# mx-contracts-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
contracts/adder/interact/: Cargo.toml
contracts/adder/interactor/: Cargo.toml
contracts/bulk-payments/: Cargo.toml
contracts/bulk-payments/interactor/: Cargo.toml  config.toml  state.toml
contracts/bulk-payments/meta/: Cargo.toml
contracts/bulk-payments/scenarios/: bulk_payments.scen.json
contracts/bulk-payments/src/: bulk_payments.rs
contracts/bulk-payments/tests/: bulk_payments_scenario_go_test.rs  bulk_payments_scenario_rs_test.rs
contracts/bulk-payments/wasm/: Cargo.toml
contracts/dn404/: Cargo.toml  sc-config.toml
contracts/dn404/meta/: Cargo.toml
contracts/dn404/src/: available_tokens.rs  dn404_proxy.rs  fee.rs  lib.rs  price.rs
contracts/dn404/tests/: dn404_test.rs  setup.rs
contracts/dn404/wasm/: Cargo.toml
contracts/erc3643/: Cargo.toml
contracts/erc3643/meta/: Cargo.toml
contracts/erc3643/src/: exchange_actions.rs  lib.rs  token.rs  transfer.rs  users.rs
contracts/erc3643/wasm/: Cargo.toml
contracts/fair-launch/: Cargo.toml  readme.md  sc-config.toml
contracts/fair-launch/meta/: Cargo.toml
contracts/fair-launch/src/: common.rs  exchange_actions.rs  fair_launch_proxy.rs  initial_launch.rs  lib.rs  pair_mock_proxy.rs  token_info.rs  transfer.rs
contracts/fair-launch/tests/: fair_launch_test.rs  tests_common.rs
contracts/fair-launch/wasm/: Cargo.toml
contracts/fractional-nfts/: Cargo.toml
contracts/fractional-nfts/meta/: Cargo.toml
contracts/fractional-nfts/src/: fractional_nfts.rs
contracts/fractional-nfts/wasm/: Cargo.toml
contracts/generic-composable-tasks/: Cargo.toml
contracts/generic-composable-tasks/meta/: Cargo.toml
contracts/generic-composable-tasks/scenarios/: generic_composable_tasks.scen.json
contracts/generic-composable-tasks/src/: call_dispatcher.rs  high_level_calls.rs  lib.rs  unique_payments.rs
contracts/generic-composable-tasks/tests/: generic_composable_tasks_tests.rs
contracts/generic-composable-tasks/wasm/: Cargo.toml
contracts/liquid-locking/: .gitignore  Cargo.toml  README.md  sc-config.toml
contracts/liquid-locking/meta/: Cargo.toml
contracts/liquid-locking/output/: liquid-locking.abi.json  liquid-locking.imports.json  liquid-locking.mxsc.json  liquid-locking.wasm
contracts/liquid-locking/scenarios/: empty.scen.json
contracts/liquid-locking/src/: lib.rs  liquid_locking_proxy.rs  unlocked_token.rs  unstaked_amount.rs
contracts/liquid-locking/tests/: liquid_locking_test.rs
contracts/liquid-locking/wasm/: Cargo.toml
contracts/multisig/: Cargo.toml  README.md
contracts/multisig-improved/: Cargo.toml
contracts/multisig-improved/meta/: Cargo.toml
contracts/multisig-improved/src/: action.rs  check_signature.rs  common_functions.rs  multisig_improved.rs  multisig_perform.rs  multisig_propose.rs  multisig_sign.rs  state.rs
contracts/multisig-improved/tests/: ms_improved_tests.rs
contracts/multisig-improved/wasm/: Cargo.toml
contracts/multisig-improved/wasm-multisig-full/: Cargo.toml
contracts/multisig-improved/wasm-multisig-view/: Cargo.toml
contracts/multisig/interact/: Cargo.toml
contracts/multisig/interact-rs/: Cargo.toml
contracts/multisig/interaction/: Multisig-adder-egld.erdjs.md
contracts/multisig/meta/: Cargo.toml
contracts/multisig/scenarios/: call_other_shard-1.scen.json  call_other_shard-2.scen.json  changeBoard.scen.json  changeQuorum.scen.json  deployAdder_err.scen.json  deployAdder_then_call.scen.json  deployFactorial.scen.json  deployOtherMultisig.scen.json  sendEsdt.scen.json  transfer_no_gas_specified_test.scen.json  upgrade.scen.json  upgrade_from_source.scen.json
contracts/multisig/src/: action.rs  multisig.rs  multisig_events.rs  multisig_perform.rs  multisig_propose.rs  multisig_sign.rs  multisig_state.rs  user_role.rs
contracts/multisig/test-contracts/: adder.wasm  factorial.wasm
contracts/multisig/tests/: multisig_blackbox_test.rs  multisig_rust_test_v2.rs  multisig_scenario_go_test.rs  multisig_scenario_rs_test.rs  multisig_whitebox_test.rs
contracts/multisig/wasm/: Cargo.toml
contracts/multisig/wasm-multisig/: Cargo.toml
contracts/multisig/wasm-multisig-full/: Cargo.toml
contracts/multisig/wasm-multisig-view/: Cargo.toml
contracts/mystery-box/interactor/: Cargo.toml  state.toml
contracts/mystery-box/wasm/: Cargo.toml
contracts/on-chain-claim/: Cargo.toml  README.md  mxsc-template.toml
contracts/on-chain-claim/interaction/: devnet.snippets.sh  mainnet.snippets.sh  testnet.snippets.sh
contracts/on-chain-claim/meta/: Cargo.toml
contracts/on-chain-claim/src/: address_info.rs  config.rs  contract.rs  events.rs  season_info.rs  storage.rs  views.rs
contracts/on-chain-claim/tests/: tests.rs
contracts/on-chain-claim/wasm/: Cargo.toml
contracts/paymaster/: Cargo.toml  README.md  sc-config.toml
contracts/paymaster/interactor/: Cargo.toml  config.toml  state.toml
contracts/paymaster/meta/: Cargo.toml
contracts/paymaster/scenarios/: empty.scen.json
contracts/paymaster/src/: fees.rs  forward_call.rs  paymaster.rs  paymaster_proxy.rs
contracts/paymaster/tests/: empty_scenario_rs_test.rs  paymaster_blackbox_test.rs
contracts/paymaster/wasm/: Cargo.toml
contracts/paymaster/wasm-paymaster-back-transfers/: Cargo.toml
contracts/potlock/: Cargo.toml  README.md  sc-config.toml
contracts/potlock/interact-rs/: Cargo.toml  config.toml  state.toml
contracts/potlock/meta/: Cargo.toml
contracts/potlock/scenarios/: potlock.scen.json
contracts/potlock/src/: potlock.rs  potlock_admin_interactions.rs  potlock_interactions.rs  potlock_proxy.rs  potlock_requirements.rs  potlock_setup.rs  potlock_storage.rs
contracts/potlock/tests/: potlock_blackbox_tests.rs  potlock_proxy.rs  (+2 more)
contracts/price-aggregator/: Cargo.toml
contracts/proxy-actions/: Cargo.toml
contracts/proxy-deployer/: Cargo.toml  sc-config.toml
contracts/proxy-pause/: Cargo.toml
contracts/seed-nft-minter/: Cargo.toml
contracts/tournament-hub/: Cargo.toml  README.md
(+524 files in other folders)
