[workspace]
resolver = "2"

members = [
  "modules",

  "contracts/price-aggregator",
  "contracts/price-aggregator/meta",
  "contracts/wegld-swap",
  "contracts/wegld-swap/meta",

  "contracts/adder",
  "contracts/adder/meta",
  "contracts/esdt-transfer-with-fee",
  "contracts/esdt-transfer-with-fee/meta",
  "contracts/bonding-curve-contract",
  "contracts/bonding-curve-contract/meta",
  "contracts/crowdfunding-esdt",
  "contracts/crowdfunding-esdt/meta",
  "contracts/crypto-bubbles",
  "contracts/crypto-bubbles/meta",
  "contracts/crypto-zombies",
  "contracts/crypto-zombies/meta",
  "contracts/crypto-kitties/kitty-ownership",
  "contracts/crypto-kitties/kitty-ownership/meta",
  "contracts/crypto-kitties/kitty-genetic-alg",
  "contracts/crypto-kitties/kitty-genetic-alg/meta",
  "contracts/crypto-kitties/kitty-auction",
  "contracts/crypto-kitties/kitty-auction/meta",
  "contracts/digital-cash",
  "contracts/digital-cash/meta",
  "contracts/empty",
  "contracts/empty/meta",
  "contracts/factorial",
  "contracts/factorial/meta",
  "contracts/fractional-nfts",
  "contracts/fractional-nfts/meta",
  "contracts/lottery-esdt",
  "contracts/lottery-esdt/meta",
  "contracts/multisig",
  "contracts/multisig/meta",
  "contracts/multisig/interact-rs",
  "contracts/mystery-box",
  "contracts/mystery-box/meta",
  "contracts/nft-minter",
  "contracts/nft-minter/meta",
  "contracts/nft-storage-prepay",
  "contracts/nft-storage-prepay/meta",
  "contracts/order-book/factory",
  "contracts/order-book/factory/meta",
  "contracts/order-book/pair",
  "contracts/order-book/pair/meta",
  "contracts/ping-pong-egld",
  "contracts/ping-pong-egld/meta",
  "contracts/rewards-distribution",
  "contracts/rewards-distribution/meta",
  "contracts/seed-nft-minter",
  "contracts/seed-nft-minter/meta",
  "contracts/token-release",
  "contracts/token-release/meta",
]
