[workspace]
resolver = "2"

members = [
  "contracts/price-aggregator",
  "contracts/price-aggregator/meta",
  "contracts/wegld-swap",
  "contracts/wegld-swap/meta",

  "contracts/adder",
  "contracts/adder/meta",
  "contracts/adder/interact",
  "contracts/esdt-transfer-with-fee",
  "contracts/esdt-transfer-with-fee/meta",
  "contracts/bonding-curve-contract",
  "contracts/bonding-curve-contract/meta",
  "contracts/check-pause",
  "contracts/check-pause/meta",
  "contracts/crowdfunding-esdt",
  "contracts/crowdfunding-esdt/meta",
  "contracts/crypto-bubbles",
  "contracts/crypto-bubbles/meta",
  "contracts/crypto-zombies",
  "contracts/crypto-zombies/meta",
  "contracts/crypto-kitties/kitty-ownership",
  "contracts/crypto-kitties/kitty-ownership/meta",
  "contracts/crypto-kitties/kitty-genetic-alg",
  "contracts/crypto-kitties/kitty-genetic-alg/meta",
  "contracts/crypto-kitties/kitty-auction",
  "contracts/crypto-kitties/kitty-auction/meta",
  "contracts/digital-cash",
  "contracts/digital-cash/meta",
  "contracts/empty",
  "contracts/empty/meta",
  "contracts/factorial",
  "contracts/factorial/meta",
  "contracts/fair-launch",
  "contracts/fair-launch/meta",
  "contracts/fractional-nfts",
  "contracts/fractional-nfts/meta",
  "contracts/lottery-esdt",
  "contracts/lottery-esdt/meta",
  "contracts/liquid-locking",
  "contracts/liquid-locking/meta",
  "contracts/multisig",
  "contracts/multisig/meta",
  "contracts/multisig/interact",
  "contracts/mystery-box",
  "contracts/mystery-box/meta",
  "contracts/nft-escrow",
  "contracts/nft-escrow/meta",
  "contracts/nft-minter",
  "contracts/nft-minter/meta",
  "contracts/nft-storage-prepay",
  "contracts/nft-storage-prepay/meta",
  "contracts/order-book/factory",
  "contracts/order-book/factory/meta",
  "contracts/order-book/pair",
  "contracts/order-book/pair/meta",
  "contracts/paymaster",
  "contracts/paymaster/meta",
  "contracts/ping-pong-egld",
  "contracts/ping-pong-egld/meta",
  "contracts/proxy-pause",
  "contracts/proxy-pause/meta",
  "contracts/rewards-distribution",
  "contracts/rewards-distribution/meta",
  "contracts/seed-nft-minter",
  "contracts/seed-nft-minter/meta",
  "contracts/token-release",
  "contracts/token-release/meta",
  "contracts/mvx-game-sc",
  "contracts/mvx-game-sc/meta"
]
