[package]
name = "bulk-payments"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/bulk_payments.rs"

[dependencies.multiversx-sc]
version = "0.57.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.1"

[workspace]
members = [
    ".",
    "meta",
    "interactor",
]
