[package]
name = "dn404"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.57.0"

[dependencies.multiversx-sc-modules]
version = "=0.57.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.4.1"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.57.0"
