[package]
name = "fractional-nfts"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/fractional_nfts.rs"

[dependencies.multiversx-sc]
version = "0.47.5"

[dependencies.multiversx-sc-modules]
version = "0.47.5"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.5"
