[package]
name = "generic-composable-tasks"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.57.1"

[dependencies.multiversx-sc-modules]
version = "0.57.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.1"

[dev-dependencies.multiversx-wegld-swap-sc]
path = "../wegld-swap"
