[package]
name = "liquid-locking"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.2"

[dependencies.multiversx-sc]
version = "0.47.2"
