[package]
name = "multisig-improved"
version = "1.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/multisig_improved.rs"

[dependencies.multiversx-sc]
version = "0.52.3"

[dependencies.multiversx-sc-modules]
version = "0.52.3"

[dev-dependencies.multiversx-sc-scenario]
version = "0.52.3"

[dev-dependencies.adder]
path = "../adder"

[dev-dependencies.factorial]
path = "../factorial"
