[package]
name = "multisig"
version = "1.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/multisig.rs"

[dependencies.multiversx-sc]
version = "0.50.4"

[dependencies.multiversx-sc-modules]
version = "0.50.4"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.4"

[dev-dependencies.adder]
path = "../adder"

[dev-dependencies.factorial]
path = "../factorial"

[dev-dependencies.multiversx-wegld-swap-sc]
version = "0.50.4"
