[package]
name = "potlock"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false
readme = "README.md"

[lib]
path = "src/potlock.rs"

[dependencies.multiversx-sc]
version = "0.52.3"

[dependencies.multiversx-sc-modules]
version = "=0.52.3"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.52.3"
