[package]
name = "multiversx-price-aggregator-sc"
version = "0.47.1"
authors = [
    "Claudiu-Marcel Bruda <claudiu.bruda@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX Price aggregator Smart Contract"
keywords = [
    "multiversx",
    "wasm",
    "webassembly",
    "blockchain",
    "contract",
]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.47.5"

[dependencies.multiversx-sc-modules]
version = "0.47.5"

[dependencies.arrayvec]
version = "0.7.1"
default-features = false

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.5"
