[package]
name = "proxy-pause"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/proxy_pause.rs"

[dependencies.multiversx-sc]
version = "0.47.5"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.5"

[dev-dependencies.check-pause]
path = "../check-pause"
