[package]
name = "seed-nft-minter"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/seed_nft_minter.rs"

[dependencies.multiversx-sc]
version = "0.54.3"

[dependencies.multiversx-sc-modules]
version = "0.54.3"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.3"
