[package]
name = "tournament-hub"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/tournament_hub.rs"

[dependencies.multiversx-sc]
version = "0.57.1"

[dev-dependencies]
num-bigint = "0.4"

[dependencies.multiversx-sc-modules]
version = "0.57.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.1"