[[bin]]
name = "basic-interact"
path = "src/basic_interact.rs"

[package]
name = "basic-interact"
version = "0.0.0"
authors = ["Ovidiu Stinga <ovidiu.stinga@multiversx.com>"]
edition = "2021"
publish = false

[dependencies]
toml = "0.8.6"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.adder]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.51.1"
