[[bin]]
name = "basic-interact"
path = "src/basic_interact_main.rs"

[package]
name = "basic-interact"
version = "0.0.0"
authors = ["Ovidiu Stinga <ovidiu.stinga@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/basic_interact.rs"

[dependencies]
toml = "0.8.6"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.24"

[dependencies.adder]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.54.3"

[features]
chain-simulator-tests = []
