[[bin]]
name = "basic-interactor"
path = "src/basic_interactor_main.rs"

[package]
name = "basic-interactor"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/basic_interactor.rs"

[dependencies]
toml = "0.8.6"

[dependencies.adder]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.57.0"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.24"

[features]
chain-simulator-tests = []
