[package]
name = "bulk-payments-interact"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[[bin]]
name = "bulk-payments-interact"
path = "src/interactor_main.rs"

[lib]
path = "src/interact.rs"

[dependencies.bulk-payments]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.57.1"

[dependencies.multiversx-sc]
version = "0.57.1"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"

[features]
chain-simulator-tests = []

