[package]
name = "liquid-locking-wasm"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[dev-dependencies]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.liquid-locking]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.41.3"
