[[bin]]
name = "multisig-interact"
path = "src/multisig_interact.rs"

[package]
name = "multisig-interact"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"
publish = false
[dependencies.multisig]
path = ".."

[dependencies.multiversx-sc-modules]
version = "0.43.3"

[dependencies.multiversx-sc-snippets]
version = "0.41.1"
