[[bin]]
name = "multisig-interact"
path = "src/multisig_interact.rs"

[package]
name = "multisig-interact"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"
publish = false

[dependencies]
toml = "0.8.6"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.multisig]
path = ".."

[dependencies.multiversx-sc-modules]
version = "0.54.0"

[dependencies.multiversx-sc-snippets]
version = "0.54.0"

[dependencies.multiversx-sc-scenario]
version = "=0.54.0"

[dependencies.multiversx-sc]
version = "=0.54.0"
