[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/potlock_interactor_main.rs"

[dependencies.potlock]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.50.4"

[dependencies.multiversx-sc]
version = "0.50.4"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"

# [workspace]

