[[bin]]
name = "rust-interact"
path = "src/potlock_interactor_main.rs"

[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[dependencies]
toml = "0.8.6"

[dependencies.potlock]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.52.1"

[dependencies.multiversx-sc]
version = "0.52.1"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
