[package]
name = "multiversx_wegld_swap_sc_meta"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[dev-dependencies]
[dependencies.multiversx_wegld_swap_sc]
path = ".."

[dependencies.multiversx-sc]
version = "0.43.3"

[dependencies.multiversx-sc-meta]
version = "0.43.3"
